# CredLyse-Backend

./: .env.template  .gitignore  README.md  alembic.ini  debug_specific_playlist.py  pyproject.toml  requirements.txt  youtube_config.json
alembic/: env.py
alembic/versions/: 39919f75178e_add_profile_picture_url.py  9fd3472ba512_initial_tables.py  b0561b798779_add_missing_enrollment_columns.py  ce8816044df8_add_email_verification_and_oauth_fields.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  config.py
app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  certificates.py  courses.py  extension.py  progress.py  users.py
app/core/: __init__.py  cache.py  config.py  database.py  http_client.py  security.py
app/middleware/: rate_limit.py
app/models/: __init__.py  certificate.py  creator_profile.py  enrollment.py  enums.py  otp_code.py  playlist.py  user.py  video.py  video_progress.py
app/schemas/: __init__.py  analytics.py  auth.py  course.py  progress.py  token.py  user.py
app/services/: __init__.py  analytics_service.py  certificate_service.py  course_service.py  email_service.py  otp_service.py  progress_service.py
tests/: conftest.py  test_ai_service.py  test_cache.py  test_http_client.py  test_processing_service.py  test_rate_limit.py  test_youtube_config.py
